# SolarSystem

./: README.md  generator.cpp
Engine/: CMakeLists.txt  README.md  catmullRomCurve.h  engine.cpp  figura3d.cpp  transformacao.cpp
Engine/demos/: bezierTeapot.xml  box.xml  cilinder.xml  repBox.xml  spot.xml  staryNight.xml  terrain.xml
Engine/models/: bezierHeart.3d  bezierTeapot.3d  box.3d  cilinder.3d  plane.3d  scone.3d  torus.3d
Engine/tinyxml/: tinyxmlerror.cpp
Fase1/: box.3d  cube1.3d  generator  generator.cpp  generator~HEAD  plane.3d
Fase1/Engine/: .gitignore  CMakeLists.txt  README.md  bezier.xml  bezierS.3d  box_1.3d  camera.h  catmullRomCurve.cpp  catmullRomCurve.h  cone.3d  cone3.3d  cone_novo.3d  coneespacos.3d  drawable.cpp  drawable.h  engine.cpp  figura3d.cpp  gereIncludes.h  light.cpp  material.cpp  plane.3d  scene.xml  solarTest.xml  sphere.3d  sphere1.3d  spheret.3d  texture.cpp  transformacao.cpp
Fase1/Generator/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  box.3d  box1.3d  cmake_install.cmake  cube1.3d  generator  generator.cpp  generator.h  heart.patch
Fase1/Generator/models/: bezier.cpp  bezier.h  box.cpp  box.h  cilinder.cpp  cone.cpp  cone.h  plane.cpp  plane.h  sphere.cpp  sphere.h  terrain.cpp  terrain.h  torus.cpp  torus.h
Fase1/Generator/utils/: model.cpp  model.h  point.h
Fase1/engine/: CMakeLists.txt  cone.3d  engine.cpp  figura3d.cpp  plane.txt
Generator/: .gitignore  README.md  generator.cpp  generator.h
Generator/models/: bezier.cpp  bezier.h  box.cpp  box.h  cilinder.h  cone.cpp  sphere.h  terrain.h
(+33 files in other folders)
